--- a/flux-config/flux/gotk-sync.yaml
+++ b/flux-config/flux/gotk-sync.yaml
@@ -25,3 +25,16 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: training-application
+  namespace: flux
+spec:
+  interval: 30s
+  path: ./training-app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux
