--- a/training-app/service.yaml
+++ b/training-app/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gitops-application
+  name: training-application
   namespace: arindam
   labels:
-    app: gitops-application
+    app: training-application
 spec:
   type: ClusterIP
   selector:
-    app: gitops-application
+    app: training-application
   ports: 
     - name: http
       protocol: TCP
